--- a/utest/utest.vcxproj
+++ b/utest/utest.vcxproj
@@ -152,8 +152,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="common\timer\timer_1ms_test.cpp" />
+    <ClCompile Include="common\timer\timer_solt_test.cpp" />
     <ClCompile Include="common\util\bitmap_test.cpp" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common\timer\common.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
