--- a/quicX.vcxproj.filters
+++ b/quicX.vcxproj.filters
@@ -10,6 +10,12 @@
     <Filter Include="common\util">
       <UniqueIdentifier>{ece281a5-2a75-437d-9c31-b584a2c419d3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="common\lock">
+      <UniqueIdentifier>{6cda4f5d-ea0d-4ca3-ae3f-11a60e8a668e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="common\queue">
+      <UniqueIdentifier>{645744a7-6bb0-4efe-8bd9-9ff63bb67c16}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="common\timer\timer_1ms.cpp">
@@ -26,6 +32,18 @@
     </ClCompile>
     <ClCompile Include="common\timer\timer_solt.cpp">
       <Filter>common\timer</Filter>
+    </ClCompile>
+    <ClCompile Include="common\util\decode.cpp">
+      <Filter>common\util</Filter>
+    </ClCompile>
+    <ClCompile Include="common\util\os_info.cpp">
+      <Filter>common\util</Filter>
+    </ClCompile>
+    <ClCompile Include="common\lock\spin_lock.cpp">
+      <Filter>common\lock</Filter>
+    </ClCompile>
+    <ClCompile Include="common\queue\queue_thread_local.cpp">
+      <Filter>common\queue</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -46,6 +64,24 @@
     </ClInclude>
     <ClInclude Include="common\timer\timer.h">
       <Filter>common\timer</Filter>
+    </ClInclude>
+    <ClInclude Include="common\util\decode.h">
+      <Filter>common\util</Filter>
+    </ClInclude>
+    <ClInclude Include="common\util\os_info.h">
+      <Filter>common\util</Filter>
+    </ClInclude>
+    <ClInclude Include="common\lock\spin_lock.h">
+      <Filter>common\lock</Filter>
+    </ClInclude>
+    <ClInclude Include="common\queue\queue_interface.h">
+      <Filter>common\queue</Filter>
+    </ClInclude>
+    <ClInclude Include="common\queue\queue_solt.h">
+      <Filter>common\queue</Filter>
+    </ClInclude>
+    <ClInclude Include="common\queue\queue_thread_local.h">
+      <Filter>common\queue</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
