--- a/utest/utest.vcxproj.filters
+++ b/utest/utest.vcxproj.filters
@@ -14,6 +14,18 @@
     <ClCompile Include="common\timer\timer_container_test.cpp">
       <Filter>common\timer</Filter>
     </ClCompile>
+    <ClCompile Include="common\util\decode_test.cpp">
+      <Filter>common\util</Filter>
+    </ClCompile>
+    <ClCompile Include="common\util\os_info_test.cpp">
+      <Filter>common\util</Filter>
+    </ClCompile>
+    <ClCompile Include="common\time_consuming.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="common\lock\spin_lock_test.cpp">
+      <Filter>common\lock</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -25,10 +37,22 @@
     <Filter Include="common\timer">
       <UniqueIdentifier>{d34ba54f-a350-4b9f-8a32-3d1ebdf4166a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="common\queue">
+      <UniqueIdentifier>{8b0f1b53-f94e-4c07-a9e8-66cfb9faf0b2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="common\lock">
+      <UniqueIdentifier>{69707032-0520-4468-a740-8c58ed140616}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common\timer\common.h">
       <Filter>common\timer</Filter>
+    </ClInclude>
+    <ClInclude Include="common\time_consuming.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="common\queue\common.h">
+      <Filter>common\queue</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
