--- a/utest/makefile
+++ b/utest/makefile
@@ -1,7 +1,7 @@
-SRCS = $(wildcard ../common/timer/*.cpp   \
-                  ../common/util/*.cpp    \
-				  ../common/queue/*.cpp   \
-				  ../common/lock/*.cpp    \
+SRCS = $(wildcard ../src/common/timer/*.cpp   \
+                  ../src/common/util/*.cpp    \
+				  ../src/common/queue/*.cpp   \
+				  ../src/common/lock/*.cpp    \
 				  ./common/timer/*.cpp    \
 				  ./common/lock/*.cpp     \
 				  ./common/util/*.cpp     \
@@ -13,11 +13,12 @@ OBJS = $(patsubst %.cpp, %.o, $(SRCS))
 CC = g++
 
 INCLUDES = -I../              \
-		   -I../common/       \
-           -I../third/gtest   \
+		   -I../src/          \
+		   -I../src/common/   \
+           -I../third/        \
 
 #debug
-CCFLAGS = -fPIC -m64 -g -std=c++11 -lstdc++ -pipe 
+CCFLAGS = -fPIC -m64 -g -std=c++11 -lstdc++ -pipe  -lpthread
 
 GTESTLIB = ../third/lib/libgtest.a
 BIN = quicx-utest
