--- a/utest/makefile
+++ b/utest/makefile
@@ -12,6 +12,7 @@ SRCS = $(wildcard ../src/common/timer/*.cpp   \
 				  ../src/common/network/mac/*.cpp   \
 				  ../src/quic/frame/*.cpp     \
 				  ../src/quic/stream/*.cpp    \
+				  ../src/quic/packet/*.cpp    \
 				  ./common/alloter/*.cpp  \
 				  ./common/timer/*.cpp    \
 				  ./common/lock/*.cpp     \
