--- a/utest/makefile
+++ b/utest/makefile
@@ -17,6 +17,7 @@ SRCS = $(wildcard ../src/common/timer/*.cpp         \
 				  ../src/quic/crypto/*.cpp          \
 				  ../src/quic/udp/*.cpp             \
 				  ../src/quic/controller/*.cpp      \
+				  ../src/quic/connection/*.cpp      \
 				  ./common/alloter/*.cpp            \
 				  ./common/timer/*.cpp              \
 				  ./common/lock/*.cpp               \
@@ -28,6 +29,7 @@ SRCS = $(wildcard ../src/common/timer/*.cpp         \
 				  ./quic/frame/*.cpp                \
 				  ./quic/packet/*.cpp               \
 				  ./quic/crypto/*.cpp               \
+				  ./quic/connection/*.cpp           \
 				  ./common/*.cpp                    \
 				  ./*.cpp)
 
