--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -38,6 +38,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
+        fetch-depth: 0
+
+    - name: Initialize submodules
+      run: |
+        git submodule update --init --recursive
+        echo "Submodules status:"
+        git submodule status
 
     - name: Install dependencies (Ubuntu)
       if: runner.os == 'Linux'
@@ -55,6 +62,18 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
+
+    - name: Verify submodules
+      run: |
+        echo "Checking if third/boringssl exists:"
+        ls -la third/
+        echo "Checking if third/boringssl/CMakeLists.txt exists:"
+        if [ -f "third/boringssl/CMakeLists.txt" ]; then
+          echo "✓ third/boringssl/CMakeLists.txt found"
+        else
+          echo "✗ third/boringssl/CMakeLists.txt not found"
+          exit 1
+        fi
 
     - name: Configure CMake
       run: >
