--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,11 @@ libhttp3.a
 build
 .cache
 .cursorrules
-third
+# Ignore third-party build artifacts but allow submodule directories
+third/*
+!third/.gitkeep
+!third/boringssl/
+!third/googletest/
 bazel-*
 MODULE.bazel.lock
 temp
