--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,17 @@ build
 .cache
 .cursorrules
 # Ignore third-party build artifacts but allow submodule directories
-third/*
-!third/.gitkeep
-!third/boringssl/
-!third/googletest/
+third/lib/
+third/include/
+third/build/
+third/CMakeCache.txt
+third/CMakeFiles/
+third/Makefile
+third/*.cmake
+third/*.a
+third/*.so
+third/*.dll
+third/*.dylib
 bazel-*
 MODULE.bazel.lock
 temp
