--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "third/googletest"]
 	path = third/googletest
 	url = https://github.com/google/googletest.git
+	branch = v1.17.0
+	ignore = dirty
+[submodule "third/boringssl"]
+	path = third/boringssl
+	url = https://github.com/google/boringssl.git
+	branch = 0.20250807.0
+	ignore = dirty
