fix github ci build issues.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -106,6 +106,7 @@ jobs:
         -S ${{ github.workspace }}
 
     - name: Build
+      shell: bash
       run: |
         # Limit parallel jobs to avoid memory issues, especially with clang
         # Clang typically uses more memory per compilation unit
