rename  interop test.

--- a/test/interop/Dockerfile
+++ b/test/interop/Dockerfile
@@ -4,6 +4,9 @@
 
 FROM ubuntu:22.04
 
+# Set noninteractive mode to avoid prompts during build
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
@@ -26,9 +29,20 @@ WORKDIR /quicx
 COPY . .
 
 # Build quicX
-RUN mkdir -p build && cd build && \
-    cmake .. -DCMAKE_BUILD_TYPE=Release && \
-    cmake --build . -j$(nproc)
+# Clean any existing build artifacts and build fresh
+# Only build interop test binaries (disable examples and other tests)
+RUN rm -rf build && \
+    mkdir -p build && \
+    cd build && \
+    cmake .. -DCMAKE_BUILD_TYPE=Release \
+             -DBUILD_EXAMPLES=OFF \
+             -DENABLE_TESTING=OFF \
+             -DENABLE_BENCHMARKS=OFF \
+             -DENABLE_FUZZING=OFF \
+             -DENABLE_CC_SIMULATOR=OFF \
+             -DENABLE_INTERGRATION=OFF \
+             -DENABLE_INTEROP=ON && \
+    cmake --build . --target interop_server --target interop_client -j4
 
 # Create directories for test files
 RUN mkdir -p /www /downloads /logs
@@ -39,7 +53,7 @@ RUN dd if=/dev/urandom of=/www/1MB.bin bs=1M count=1 && \
     dd if=/dev/urandom of=/www/10MB.bin bs=1M count=10
 
 # Copy run script
-COPY interop/run_endpoint.sh /run_endpoint.sh
+COPY test/interop/run_endpoint.sh /run_endpoint.sh
 RUN chmod +x /run_endpoint.sh
 
 # Expose QUIC port (UDP 443)
